# ComputationalGraph

./: .travis.yml  AddGate.cpp  AddGate.h  CMakeLists.txt  ComputationalGraph.cpp  ComputationalGraph.h  Gate.cpp  Gate.h  Gate.hpp  InputGate.cpp  InputGate.h  MultiplyGate.cpp  MultiplyGate.h  MultiplyGate.hpp  README.md  main.cpp  secondgraph.cpp
include/: AddGate.h  ComputationalGraph.h  Gate.h  MaxGate.h  MultiplyGate.h  SigmoidGate.h  UnaryAddGate.h  UnaryExponentGate.h  UnaryMultiplyGate.h  UnaryXInverseGate.h
src/: AddGate.cpp  ComputationalGraph.cpp  MaxGate.cpp  MultiplyGate.cpp  SigmoidGate.cpp  UnaryAddGate.cpp  UnaryExponentGate.cpp  UnaryMultiplyGate.cpp  UnaryXInverseGate.cpp  main.cpp  secondgraph.cpp  thirdgraph.cpp
